--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "𝙹𝙾𝚎𝚕 𝙱𝚘𝚝",
-  "description": " 𝚆𝚑𝚊𝚝𝚜𝙰𝚙𝚙 𝚋𝚘𝚝 𝚌𝚛𝚎𝚊𝚝𝚎𝚍 𝚋𝚢 𝙻𝙾𝚛𝚍 𝙹𝙾𝚎𝚕.",
+  "name": "Scorpion 𝙱𝚘𝚝",
+  "description": " 𝚆𝚑𝚊𝚝𝚜𝙰𝚙𝚙 𝚋𝚘𝚝 𝚌𝚛𝚎𝚊𝚝𝚎𝚍 𝚋𝚢 𝙻𝙾𝚛𝚍 Dullah.",
   "keywords": [
     "whatsapp bot"
   ],
-  "repository": "https://github.com/joeljamestech/JOEL-MD",
+  "repository": "https://github.com/abdallahsalimjuma/SCORPION-BOT",
   "stack": "container",
   "env": { 
       "SESSION_ID": {
