--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "𝙹𝙾𝚎𝚕 𝚃𝚎𝚌𝚑",
+  "name": "Scorpion Bot",
   "version": "10.8.1",
   "description": "Mercedes latest multi device whatsapp bot",
   "main": "index.js",
